--- a/src/components/styles/header.module.css
+++ b/src/components/styles/header.module.css
@@ -1,36 +1,8 @@
-/* header {
-  padding: 1.438rem 6.188rem;
-  border: 1px solid #e8e8e8;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-header p {
-  color: #0290ff;
-  font-size: 1.4rem;
-  font-weight: bold;
+h1 {
+  font-family: "Montserrat", sans-serif;
 }
-
-.nav_link {
-  color: #121212;
-  text-decoration: none;
-  margin: auto 30px;
-  font-size: 0.7rem;
-}
-
-nav ul,
-header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  list-style: none;
-}
-
-.bookStore_para {
-  margin-left: 30px;
-}
-
-.icon {
-    color: blue;
-} */
 
 nav.naviagtionbar {
   display: flex;
@@ -40,6 +12,7 @@ nav.naviagtionbar {
   border-radius: 4px;
   background-color: #fff;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.5);
+  font-family: "Montserrat", sans-serif;
 }
 
 .navitem {
@@ -55,7 +28,7 @@ ul.naviagtionlink {
 
 ul.naviagtionlink a {
   padding: 25%;
-  color: #0290ff;
+  color: #121212;
   text-decoration: none;
   opacity: 0.5;
 }
@@ -68,4 +41,8 @@ ul.naviagtionlink a {
 .icon {
   color: #0290ff;
   margin-right: 112px;
+}
+
+li a .active {
+  opacity: 1;
 }
